--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
     "babel-eslint": "^10.1.0",
     "babel-preset-nano-react-app": "^0.1.0",
     "eslint": "^7.29.0",
@@ -28,7 +30,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "parcel": "1.12.4",
+    "parcel": "1.12.3",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2"
   },
